--- a/style.css
+++ b/style.css
@@ -1,26 +1,39 @@
-* {
+html, body {
     margin: 0;
     padding: 0;
+    height: 100%;
 }
-
-body {
-    background: url(img/baclground.jpg);
+html {
+    background: url(img/baclground.jpg); 
+    background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
     height:100%; 
     overflow:hidden; 
+    z-index: -2;
+    backdrop-filter: blur(6px);
+}
+body {
+    background: url(img/baclground.jpg); 
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    height:100%; 
+    overflow:hidden; 
+    z-index: -2;
+    backdrop-filter: blur(6px);
 }
 
 .background {
-    position: fixed; /* 或者 absolute，取决于你的需求 */
+    position: fixed; 
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(255, 255, 255, 0.5); /* 半透明背景 */
-    z-index: -1; /* 确保它位于其他内容的后面 */
-    pointer-events: none; /* 防止它拦截鼠标事件 */
-    filter: blur(3px);
+    background-color: rgba(255, 255, 255, 0.5); 
+    z-index: -1; 
+    pointer-events: none; 
+    filter: blur(6px);
 }
 .info {
     color: white;
@@ -61,3 +74,8 @@ body {
     margin-left: 2rem;
     margin-bottom: 1rem;
 }
+
+@media(prefers-color-scheme: dark) {
+    
+}
+    
