--- a/style.css
+++ b/style.css
@@ -47,13 +47,17 @@ body {
 .window {
     display: flex;
     flex: 1;
+    flex-direction: row;
     width: 50rem;
     height: 35rem;
     background-color: rgb(33, 95, 95);
-    margin: 12% auto;
+    /* margin: 12% auto; */
     border: 2px solid white;
     border-radius: 8px;
-    
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 .left {
     display: flex;
@@ -64,16 +68,69 @@ body {
 }
 .right {
     display: flex;
-    background-color: blueviolet;
+    flex-direction: column;
+    width: 65%;
+    .items {
+        flex: 1;
+        padding: 10px;
+        border: 8px solid orange;
+        border-radius: 8px;
+        margin: 10px;
+        background-color: gray;
+        transition: all 0.5s ease;
+    }
+    .items:hover {
+        transform: scale(1.05);
+    }
+    .items:active {
+        transform: scale(0.5);
+    }
+}
+.hearimg:hover {
+    transform: rotate(360deg) scale(1.5);
 }
 .hearimg {
-    width: 12rem;
+    width: 10rem;
     border: 4px solid rgb(0, 183, 255);
     padding: 4px;
     border-radius: 100px;
     margin-top: 2rem;
-    margin-left: 2rem;
+    margin-left: 4rem;
     margin-bottom: 1rem;
+    transition: all 0.5s ease;
+}
+.test {
+    text-decoration: none;
+    transition: all 1s ease;
+}
+.test:hover {
+    transform: scale(1.5);
+    background-color: aquamarine;
+    border: 6px black solid;
+    border-radius: 8px;
+}
+.hr {
+    width: 100px;
+    height: 100px;
+    border-radius: 100px;
+    background-color: aquamarine;
+    animation: jump 1s infinite ease;
+}
+
+@keyframes jump {
+    0% {
+        transform: translateY(0%);
+    }
+    50% {
+        transform: translateY(50%);
+    }
+    100% {
+        transform: translateY(0%);
+    }
+}
+
+.hearimgtext {
+    margin-left: 4rem;
 }
 
 @media(prefers-color-scheme: dark) {
