--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,7 +4,7 @@ html, body {
     height: 100%;
 }
 html {
-    background: url(img/light.jpg); 
+    background: url(../img/light.jpg); 
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
@@ -14,7 +14,7 @@ html {
     backdrop-filter: blur(6px);
 }
 body {
-    background: url(img/light.jpg); 
+    background: url(../img/light.jpg); 
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
@@ -25,7 +25,7 @@ body {
 }
 
 .background {
-    content: url(img/light.jpg);
+    content: url(../img/light.jpg);
     position: fixed; 
     top: 0;
     left: 0;
@@ -150,31 +150,31 @@ body {
 
 @media(prefers-color-scheme: dark) {
     html {
-        background: url(img/drak.png); 
+        background: url(../img/drak.png); 
     }
     body {
-        background: url(img/drak.png); 
+        background: url(../img/drak.png); 
     }
     .window {
         background-color: rgba(21, 20, 20, 0.6);
     }
     .background {
-        content: url(img/drak.png);
+        content: url(../img/drak.png);
     }
     .items_doc {
-        content: url(ico/doc/doc_drak.svg);
+        content: url(../ico/doc/doc_drak.svg);
         width: 1rem;
     }
     .items_project {
-        content: url(ico/project/project_drak.svg);
+        content: url(../ico/project/project_drak.svg);
         width: 1rem;
     }
     .items_contact {
-        content: url(ico/contact/contact_drak.svg);
+        content: url(../ico/contact/contact_drak.svg);
         width: 1rem;
     }
     .items_about {
-        content: url(ico/about/about_drak.svg);
+        content: url(../ico/about/about_drak.svg);
         width: 1rem;
     }
 }
