--- a/CSS/style.css
+++ b/CSS/style.css
@@ -45,9 +45,8 @@ body {
 }
 .window {
     display: flex;
-    flex: 0.30 0.70;
     flex-direction: row;
-    width: 50rem;
+    width: 55rem;
     height: 35rem;
     background-color: rgba(211, 222, 222, 0.2);
     /* margin: 12% auto; */
@@ -60,22 +59,26 @@ body {
 }
 .left {
     display: flex;
+    flex: 0.4;
     flex-direction: column;
     justify-content: start;
     align-items: center;
-    margin-right: 2rem;
+    margin-right: 1rem;
 }
 .right {
     display: flex;
+    flex: 0.6;
     flex-direction: column;
     width: 60%;
     margin-left: 1rem;
+    padding: 1rem;
     /* margin-left: 1rem; */
     .items {
+        padding: 6px;
         flex-direction: row;
         flex: 1;
         padding: 10px;
-        border: 2px solid rgb(210, 210, 210);
+        border: 2px solid rgb(255, 255, 255);
         border-radius: 8px;
         margin: 4px;
         background-color: rgba(202, 208, 212, 0.6);
@@ -155,8 +158,15 @@ body {
     body {
         background: url(../img/drak.png); 
     }
+    * {
+        color: white;
+    }
+    .hearimgtext {
+        color: white
+    }
     .window {
         background-color: rgba(21, 20, 20, 0.6);
+        border: 2px solid black;
     }
     .background {
         content: url(../img/drak.png);
@@ -176,6 +186,12 @@ body {
     .items_about {
         content: url(../ico/about/about_drak.svg);
         width: 1rem;
+    }
+    .right{
+        .items {
+            border: 2px solid rgb(0, 0, 0);
+            background-color: rgba(51, 51, 52, 0.6);
+        }
     }
 }
 
