--- a/CSS/project.css
+++ b/CSS/project.css
@@ -154,6 +154,48 @@ button:hover {
 button:active {
     transform: scale(0.5);
 }
+@media screen and (max-width: 900px) {
+    body {
+        overflow:auto; 
+        overflow-x: hidden;
+    }
+    .window {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        height: 100%;
+        border: 0px;
+    }
+    .info {
+        z-index: -1;
+    }
+    .content {
+        flex-direction: column;
+    }
+    .items {
+        margin: 1rem;
+        padding: 8px;
+        display: block;
+        width: 100%;
+        h1 {
+            display: inline-block;
+            position: absolute;
+            top: 3;
+            font-weight: bolder;
+            margin-left: 10px;
+        }
+        hr {
+            border: 2px solid white
+        }
+        img {
+            border-radius: 4px;
+            width: 3rem;
+        }
+        .import {
+            font-weight: bold;
+        }
+    }
+}
 @media(prefers-color-scheme: dark) {
     html {
         background: url(../img/drak.png); 
