--- a/CSS/style.css
+++ b/CSS/style.css
@@ -150,7 +150,22 @@ body {
 .hearimgtext {
     margin-left: 4rem;
 }
-
+@media screen and (max-width: 900px) {
+    body {
+        overflow:auto; 
+        overflow-x: hidden;
+    }
+    .window {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        height: 100%;
+        border: 0px;
+    }
+    .info {
+        z-index: -1;
+    }
+}
 @media(prefers-color-scheme: dark) {
     html {
         background: url(../img/drak.png); 
