--- a/CSS/about.css
+++ b/CSS/about.css
@@ -88,6 +88,10 @@ body {
     grid-template-rows: repeat(2, 1fr); /* 定义三列，每列等宽 
     grid-gap: 10px; 设置网格间距 */
     display: flex;
+    flex-direction: column;
+    h1 {
+        margin: 10px;
+    }
 }
 .items {
     margin: 1rem;
