--- a/CSS/call.css
+++ b/CSS/call.css
@@ -53,7 +53,7 @@ body {
     height: 35rem;
     background-color: rgba(211, 222, 222, 0.2);
     /* margin: 12% auto; */
-    border: 2px solid white;
+    border: 2px solid rgba(255, 255, 255, 0.2);
     border-radius: 8px;
     position: absolute;
     top: 50%;
@@ -92,7 +92,7 @@ body {
 .items {
     margin: 1rem;
     background-color: rgba(202, 208, 212, 0.6);
-    border: 2px solid rgb(255, 255, 255);
+    border: 2px solid rgba(255, 255, 255, 0.4);
     border-radius: 8px;
     padding: 8px;
     display: block;
@@ -185,11 +185,11 @@ button:active {
     }
     .window {
         background-color: rgba(21, 20, 20, 0.2);
-        border: 2px solid black;
+        border: 2px solid rgba(255, 255, 255, 0.2);
     }
     .items {
-        border: 2px solid rgb(0, 0, 0);
-        background-color: rgba(51, 51, 52, 0.6);
+        border: 2px solid rgba(255, 255, 255, 0.2);
+        background-color: rgba(21, 20, 20, 0.4);
     }
 }
 
