--- a/CSS/doc.css
+++ b/CSS/doc.css
@@ -1,27 +1,7 @@
 * {
     margin: 0;
 }
-/* 全局滚动条样式 */
-::-webkit-scrollbar {
-    width: 12px; /* 滚动条的宽度 */
-    height: 12px;
-  }
-  
-  /* 滚动条轨道 */
-  ::-webkit-scrollbar-track {
-    background-color: rgba(211, 222, 222, 0.6); /* 滚动条轨道的颜色 */
-  }
-  
-  /* 滚动条滑块 */
-  ::-webkit-scrollbar-thumb {
-    background-color: rgba(255, 255, 255, 0.8); /* 滚动条滑块的颜色 */
-    border-radius: 6px; /* 滚动条滑块的圆角 */
-  }
-  
-  /* 滚动条滑块hover效果 */
-  ::-webkit-scrollbar-thumb:hover {
-    background: #757575; /* 鼠标悬停时滚动条滑块的颜色 */
-  }
+
 html, body {
     margin: 0;
     padding: 0;
@@ -74,7 +54,7 @@ body {
     height: 35rem;
     background-color: rgba(211, 222, 222, 0.2);
     /* margin: 12% auto; */
-    border: 2px solid white;
+    border: 2px solid rgba(255, 255, 255, 0.2);
     border-radius: 8px;
     position: absolute;
     top: 50%;
@@ -90,6 +70,7 @@ body {
 #show {
     width: 100%;
     height: 31rem;
+    border: 2px solid rgba(255, 255, 255, 0.4);
     border-radius: 8px;
 }
 .dir {
