--- a/CSS/style.css
+++ b/CSS/style.css
@@ -38,7 +38,6 @@ body {
 }
 .window {
     display: flex;
-    flex-direction: row;
     width: 55rem;
     height: 35rem;
     background-color: rgba(211, 222, 222, 0.3);
@@ -50,7 +49,38 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
 }
-
+button {
+    background-color: rgb(15, 122, 237);
+    border: white solid 2px;
+    border-radius: 4px;
+    color: white;
+    font-weight: bold;
+    font-size: large;
+    margin-left: 8px;
+    transition: all 0.5s ease;
+}
+button:hover {
+    border-color: black;
+}
+button:active {
+    transform: scale(0.5);
+}
+@media screen and (max-width: 900px) {
+    body {
+        overflow:auto; 
+    }
+    .window {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        height: 100%;
+        border: 0px;
+        overflow-x: hidden;
+    }
+    .info {
+        z-index: -1;
+    }
+}
 @media(prefers-color-scheme: dark) {
     html {
         background: url(../img/drak.png); 
