--- a/CSS/call.css
+++ b/CSS/call.css
@@ -83,6 +83,13 @@ body {
         top: 1;
     }
 }
+.show_img {
+    background-color: white;
+    padding: 4px;
+}
+#BL {
+    padding: 8px;
+}
 .content {
     /* display: grid;
     grid-template-rows: repeat(2, 1fr); /* 定义三列，每列等宽 
