--- a/CSS/style.css
+++ b/CSS/style.css
@@ -49,6 +49,7 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     box-shadow: 0 0 10px black;
+    transition: all 1s ease-in-out;
 }
 button {
     background-color: rgb(15, 122, 237);
@@ -69,6 +70,7 @@ button:active {
 @media screen and (max-width: 900px) {
     body {
         overflow:auto; 
+        overflow-x: hidden;
     }
     .window {
         display: flex;
@@ -77,6 +79,7 @@ button:active {
         height: 100%;
         border: 0px;
         overflow-x: hidden;
+        transition: all 1s ease-in-out;
     }
     .info {
         z-index: -1;
