--- a/CSS/index.css
+++ b/CSS/index.css
@@ -27,6 +27,23 @@
     justify-content: start;
     align-items: center;
     margin-right: 1rem;
+    #tools {
+        margin: 10px;
+        text-decoration: none;
+        color: black;
+        background-color: rgba(202, 208, 212, 0.2);
+        padding: 10px;
+        border: 2px solid rgba(255, 255, 255, 0.2);
+        border-radius: 8px;
+        width: 100%;
+        transform: translateX(5%);
+        text-align: center;
+        font-weight: bold;
+        transition: all 0.5s ease-in-out;
+    }
+    #tools:hover {
+        background-color: rgba(202, 208, 212, 0.6);
+    }
 }
 .right {
     display: flex;
