--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,3 +1,12 @@
+@font-face {
+    font-family: 'SourceHan';
+    src: url('../Font/SourceHanSansSC-Medium.otf') format('otf');
+}
+
+html {
+    font-family: 'SourceHan';
+}
+
 .info {
     color: white;
     display: block;
@@ -133,6 +142,11 @@
     .window {
         background-color: rgba(21, 20, 20, 0.2);
         /* border: 2px solid black; */
+    }
+    .left {
+        #tools {
+        color: white;
+    }
     }
     .background {
         content: url(../img/drak.png);
