--- a/CSS/project.css
+++ b/CSS/project.css
@@ -136,10 +136,11 @@ body {
         flex-direction: column;
     }
     .items {
-        margin: 1rem;
+        margin: auto;
+        margin-top: 1rem;
         padding: 8px;
         display: block;
-        width: 100%;
+        width: 90%;
         h1 {
             display: inline-block;
             position: absolute;
