--- a/CSS/index.css
+++ b/CSS/index.css
@@ -37,7 +37,7 @@ html {
     align-items: center;
     margin-right: 1rem;
     #tools {
-        margin: 10px;
+        
         text-decoration: none;
         color: black;
         background-color: rgba(202, 208, 212, 0.2);
@@ -121,6 +121,35 @@ html {
         height: 100%;
         border: 0px;
         overflow-x: hidden;
+        .right {
+            margin: auto;
+            width: 40vh;
+        }
+    }
+    .left {
+        display: flex;
+        flex: 0.4;
+        flex-direction: column;
+        justify-content: start;
+        align-items: center;
+        margin-right: 1rem;
+        #tools {
+            margin-right: 1rem;
+            text-decoration: none;
+            color: black;
+            background-color: rgba(202, 208, 212, 0.2);
+            padding: 10px;
+            border: 2px solid rgba(255, 255, 255, 0.2);
+            border-radius: 8px;
+            width: 80%;
+            transform: translateX(5%);
+            text-align: center;
+            font-weight: bold;
+            transition: all 0.5s ease-in-out;
+        }
+        #tools:hover {
+            background-color: rgba(202, 208, 212, 0.6);
+        }
     }
     .info {
         z-index: -1;
