--- a/CSS/style.css
+++ b/CSS/style.css
@@ -51,6 +51,9 @@ body {
     transition: all 1s ease-in-out;
     backdrop-filter: blur(10px);
 }
+.bar {
+    backdrop-filter: blur(10px);
+}
 button {
     background-color: rgb(15, 122, 237);
     border: white solid 2px;
