--- a/CSS/call.css
+++ b/CSS/call.css
@@ -58,6 +58,7 @@ body {
     transform: translate(-50%, -50%);
     backdrop-filter: blur(10px);
 }
+
 .bar {
     padding-top: 8px;
     padding-left: 10px;
@@ -65,25 +66,26 @@ body {
     top: 0;
     background-color: rgba(211, 222, 222, 0.6);
     z-index: 1;
-    img {
-        margin: 0;
-        width: 3rem;
-        transform: translate(4%, -4%);
-        transition: all 1s ease;
-    }
-    img:hover {
-        background-color: #757575;
-        border-radius: 8px;
-    }
-    h1 {
-        display: inline-block;
-        position: absolute;
-        top: 1;
-    }
+}
+#back {
+    margin: 0;
+    width: 3rem;
+    transform: translate(4%, -4%);
+    transition: all 1s ease;
+}
+#back:hover {
+    background-color: #757575;
+    border-radius: 8px;
+}
+#title {
+    display: inline-block;
+    position: absolute;
+    top: 1;
 }
 .show_img {
     background-color: white;
     padding: 4px;
+    justify-self: center;
 }
 #BL {
     padding: 8px;
@@ -95,21 +97,25 @@ body {
     display: flex;
 }
 .items {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     margin: 1rem;
     background-color: rgba(202, 208, 212, 0.6);
     border: 2px solid rgba(255, 255, 255, 0.4);
     border-radius: 8px;
     padding: 8px;
-    display: block;
     width: 100%;
     justify-items: center;
-    img {
-        border-radius: 4px;
-        width: 3rem;
-    }
-    .import {
-        font-weight: bold;
-    }
+    justify-content: center;
+}
+img {
+    border-radius: 4px;
+    width: 3rem;
+    align-items: center;
+}
+.import {
+    font-weight: bold;
 }
 
 @media screen and (max-width: 900px) {
