--- a/CSS/doc.css
+++ b/CSS/doc.css
@@ -84,21 +84,21 @@ body {
     top: 0;
     background-color: rgba(211, 222, 222, 0.6);
     z-index: 1;
-    img {
-        margin: 0;
-        width: 3rem;
-        transform: translate(4%, -4%);
-        transition: all 1s ease;
-    }
-    img:hover {
-        background-color: #757575;
-        border-radius: 8px;
-    }
-    h1 {
-        display: inline-block;
-        position: absolute;
-        top: 1;
-    }
+}
+#back {
+    margin: 0;
+    width: 3rem;
+    transform: translate(4%, -4%);
+    transition: all 1s ease;
+}
+#back:hover {
+    background-color: #757575;
+    border-radius: 8px;
+}
+#title {
+    display: inline-block;
+    position: absolute;
+    top: 1;
 }
 
 @media screen and (max-width: 900px) {
