--- a/CSS/style.css
+++ b/CSS/style.css
@@ -22,6 +22,7 @@ body {
     overflow:hidden; 
     z-index: -2;
     backdrop-filter: blur(0px);
+    user-select: none;
 }
 
 .background {
@@ -70,6 +71,9 @@ button:hover {
 }
 button:active {
     transform: scale(0.5);
+}
+.preloadimg {
+    display: none;
 }
 @media screen and (max-width: 900px) {
     body {
