feat(CSS): 添加导航栏项目宽度样式
导航栏项目宽度样式增加
.items_doc, .items_project, .items_contact, .items_about 的宽度均设置为 2rem

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -87,6 +87,18 @@ html {
 .item {
             width: 2rem;
 }
+.items_doc {
+    width: 2rem;
+}
+.items_project {
+    width: 2rem;
+}
+.items_contact {
+    width: 2rem;
+}
+.items_about {
+    width: 2rem;
+}
 .items:hover {
         transform: scale(1.05);
 }
